--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.1",
+    "@kolking/react-native-rating": "^1.1.2",
     "@react-native-async-storage/async-storage": "^1.19.3",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/native": "^6.1.7",
@@ -24,6 +25,8 @@
     "react-native-dropdown-select-list": "^2.0.5",
     "react-native-gesture-handler": "^2.12.1",
     "react-native-image-picker": "^7.0.0",
+    "react-native-ionicons": "^4.6.5",
+    "react-native-ratings": "^8.1.0",
     "react-native-reanimated": "^3.4.2",
     "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "^3.25.0",
