--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@hookform/resolvers": "^3.3.1",
     "@kolking/react-native-rating": "^1.1.2",
     "@react-native-async-storage/async-storage": "^1.19.3",
@@ -30,6 +31,7 @@
     "react-native-reanimated": "^3.4.2",
     "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "^3.25.0",
+    "react-native-vector-icons": "^10.0.0",
     "react-redux": "^8.1.2",
     "yup": "^1.2.0"
   },
@@ -41,6 +43,7 @@
     "@react-native/metro-config": "^0.72.11",
     "@tsconfig/react-native": "^3.0.0",
     "@types/react": "^18.0.24",
+    "@types/react-native-vector-icons": "^6.4.15",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.2.1",
     "eslint": "^8.19.0",
