--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@hookform/resolvers": "^3.3.1",
     "@kolking/react-native-rating": "^1.1.2",
+    "@ptomasroos/react-native-multi-slider": "^2.2.2",
     "@react-native-async-storage/async-storage": "^1.19.3",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-community/slider": "^4.4.3",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.17",
     "@reduxjs/toolkit": "^1.9.5",
@@ -27,12 +29,15 @@
     "react-native-gesture-handler": "^2.12.1",
     "react-native-image-picker": "^7.0.0",
     "react-native-ionicons": "^4.6.5",
+    "react-native-range-slider": "^0.1.2",
     "react-native-ratings": "^8.1.0",
     "react-native-reanimated": "^3.4.2",
     "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "^3.25.0",
     "react-native-vector-icons": "^10.0.0",
     "react-redux": "^8.1.2",
+    "react-router-dom": "^6.16.0",
+    "rn-range-slider": "^2.2.2",
     "yup": "^1.2.0"
   },
   "devDependencies": {
