--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/react-native-fontawesome": "^0.3.0",
     "@hookform/resolvers": "^3.3.1",
     "@kolking/react-native-rating": "^1.1.2",
     "@ptomasroos/react-native-multi-slider": "^2.2.2",
@@ -34,6 +35,7 @@
     "react-native-reanimated": "^3.4.2",
     "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "^3.25.0",
+    "react-native-svg": "^13.14.0",
     "react-native-vector-icons": "^10.0.0",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.16.0",
