--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@backpackapp-io/react-native-toast": "^0.10.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-native-fontawesome": "^0.3.0",
     "@hookform/resolvers": "^3.3.1",
@@ -21,25 +22,30 @@
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.17",
     "@reduxjs/toolkit": "^1.9.5",
+    "@types/react-native": "^0.72.3",
+    "add": "^2.0.6",
     "axios": "^1.5.0",
     "react": "18.2.0",
     "react-hook-form": "^7.46.1",
     "react-native": "0.72.4",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-dropdown-select-list": "^2.0.5",
-    "react-native-gesture-handler": "^2.12.1",
+    "react-native-gesture-handler": "^2.13.1",
     "react-native-image-picker": "^7.0.0",
     "react-native-ionicons": "^4.6.5",
     "react-native-range-slider": "^0.1.2",
     "react-native-ratings": "^8.1.0",
-    "react-native-reanimated": "^3.4.2",
+    "react-native-reanimated": "^3.5.4",
     "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "^3.25.0",
+    "react-native-simple-toast": "^3.0.2",
     "react-native-svg": "^13.14.0",
+    "react-native-toast-notifications": "^3.4.0",
     "react-native-vector-icons": "^9.0.0",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.16.0",
     "rn-range-slider": "^2.2.2",
+    "toastify-react-native": "^3.1.0",
     "yup": "^1.2.0"
   },
   "devDependencies": {
@@ -49,7 +55,7 @@
     "@react-native/eslint-config": "^0.72.2",
     "@react-native/metro-config": "^0.72.11",
     "@tsconfig/react-native": "^3.0.0",
-    "@types/react": "^18.0.24",
+    "@types/react": "^18.2.27",
     "@types/react-native-vector-icons": "^6.4.15",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.2.1",
