--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-native-async-storage/async-storage": "^1.19.3",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-community/slider": "^4.4.3",
+    "@react-native-picker/picker": "^2.5.1",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.17",
     "@reduxjs/toolkit": "^1.9.5",
@@ -28,22 +29,28 @@
     "react": "18.2.0",
     "react-hook-form": "^7.46.1",
     "react-native": "0.72.4",
+    "react-native-animated-pagination-dot": "^0.4.0",
+    "react-native-dots-pagination": "^0.3.1",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-dropdown-select-list": "^2.0.5",
     "react-native-gesture-handler": "^2.13.1",
     "react-native-image-picker": "^7.0.0",
     "react-native-ionicons": "^4.6.5",
+    "react-native-picker-select": "^8.1.0",
     "react-native-range-slider": "^0.1.2",
     "react-native-ratings": "^8.1.0",
     "react-native-reanimated": "^3.5.4",
     "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "^3.25.0",
     "react-native-simple-toast": "^3.0.2",
+    "react-native-slider": "^0.11.0",
     "react-native-svg": "^13.14.0",
     "react-native-toast-notifications": "^3.4.0",
     "react-native-vector-icons": "^9.0.0",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.16.0",
+    "react-router-native": "^6.16.0",
+    "react-select": "^5.7.7",
     "rn-range-slider": "^2.2.2",
     "toastify-react-native": "^3.1.0",
     "yup": "^1.2.0"
