--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-select": "^5.7.7",
     "rn-range-slider": "^2.2.2",
     "toastify-react-native": "^3.1.0",
+    "usehooks-ts": "^2.9.1",
     "yup": "^1.2.0"
   },
   "devDependencies": {
