--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-native-screens": "^3.25.0",
     "react-native-simple-toast": "^3.0.2",
     "react-native-slider": "^0.11.0",
+    "react-native-socketio": "^0.3.0",
     "react-native-svg": "^13.14.0",
     "react-native-toast-notifications": "^3.4.0",
     "react-native-vector-icons": "^9.0.0",
@@ -52,6 +53,7 @@
     "react-router-native": "^6.16.0",
     "react-select": "^5.7.7",
     "rn-range-slider": "^2.2.2",
+    "socket.io-client": "^4.7.2",
     "toastify-react-native": "^3.1.0",
     "usehooks-ts": "^2.9.1",
     "yup": "^1.2.0"
