Settings for Andriod

--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "axios": "^1.5.0",
     "react": "18.2.0",
     "react-hook-form": "^7.46.1",
-    "react-native": "0.72.4",
+    "react-native": "^0.72.6",
     "react-native-animated-pagination-dot": "^0.4.0",
     "react-native-dots-pagination": "^0.3.1",
     "react-native-dropdown-picker": "^5.4.6",
@@ -44,7 +44,6 @@
     "react-native-screens": "^3.25.0",
     "react-native-simple-toast": "^3.0.2",
     "react-native-slider": "^0.11.0",
-    "react-native-socketio": "^0.3.0",
     "react-native-svg": "^13.14.0",
     "react-native-toast-notifications": "^3.4.0",
     "react-native-vector-icons": "^9.0.0",
