--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -2,5 +2,5 @@ rootProject.name = 'bookstore_native'
 apply from: file("../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesSettingsGradle(settings)
 include ':app'
 includeBuild('../node_modules/@react-native/gradle-plugin')
-include ':react-native-toastify'
-   project(':react-native-toastify').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-toastify/android')
+// include ':react-native-toastify'
+//    project(':react-native-toastify').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-toastify/android')
