--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@react-native-async-storage/async-storage": "^1.19.3",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-community/slider": "^4.4.3",
+    "@react-native-firebase/app": "^18.6.0",
+    "@react-native-firebase/messaging": "^18.6.0",
     "@react-native-picker/picker": "^2.5.1",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.17",
@@ -37,6 +39,7 @@
     "react-native-image-picker": "^7.0.0",
     "react-native-ionicons": "^4.6.5",
     "react-native-picker-select": "^8.1.0",
+    "react-native-push-notification": "^8.1.1",
     "react-native-range-slider": "^0.1.2",
     "react-native-ratings": "^8.1.0",
     "react-native-reanimated": "^3.5.4",
@@ -65,6 +68,7 @@
     "@react-native/metro-config": "^0.72.11",
     "@tsconfig/react-native": "^3.0.0",
     "@types/react": "^18.2.27",
+    "@types/react-native-push-notification": "^8.1.3",
     "@types/react-native-vector-icons": "^6.4.15",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.2.1",
