--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -109,8 +109,9 @@ dependencies {
     // The version of react-native is set by the React Native Gradle Plugin
     implementation("com.facebook.react:react-android")
     // implementation project(':react-native-toastify')
+    
     implementation platform('com.google.firebase:firebase-bom:32.5.0')
-
+    implementation 'com.google.firebase:firebase-analytics'
     debugImplementation("com.facebook.flipper:flipper:${FLIPPER_VERSION}")
     debugImplementation("com.facebook.flipper:flipper-network-plugin:${FLIPPER_VERSION}") {
         exclude group:'com.squareup.okhttp3', module:'okhttp'
