--- a/android/build.gradle
+++ b/android/build.gradle
@@ -6,27 +6,27 @@ buildscript {
         minSdkVersion = 21
         compileSdkVersion = 33
         targetSdkVersion = 33
-        firebaseMessagingVersion = '32.5.0'
+        // firebaseMessagingVersion = '32.5.0'
 
         // We use NDK 23 which has both M1 support and is the side-by-side NDK version from AGP.
         ndkVersion = "23.1.7779620"
         
-  //   set('react-native', [
-  //   versions: [
-  //     // Overriding Build/Android SDK Versions
-  //     android : [
-  //       minSdk    : 21,
-  //       targetSdk : 33,
-  //       compileSdk: 33,
-  //     ],
+    set('react-native', [
+    versions: [
+      // Overriding Build/Android SDK Versions
+      android : [
+        minSdk    : 21,
+        targetSdk : 33,
+        compileSdk: 33,
+      ],
 
-  //     // Overriding Library SDK Versions
-  //     firebase: [
-  //       // Override Firebase SDK Version
-  //       bom           : "32.5.0"
-  //     ],
-  //   ],
-  // ])
+      // Overriding Library SDK Versions
+      firebase: [
+        // Override Firebase SDK Version
+        bom           : "32.5.0"
+      ],
+    ],
+  ])
     }
     repositories {
         google()
@@ -35,12 +35,12 @@ buildscript {
     dependencies {
         classpath("com.android.tools.build:gradle")
         classpath("com.facebook.react:react-native-gradle-plugin")
-        classpath('com.google.gms:google-services:4.3.15')   
+        classpath 'com.google.gms:google-services:4.4.0'
     }
 }
 
- allprojects {
-    repositories {
-      google()
-    }
-}
+//  allprojects {
+//     repositories {
+//       google()
+//     }
+// }
