--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/react-native-fontawesome": "^0.3.0",
     "@hookform/resolvers": "^3.3.1",
     "@kolking/react-native-rating": "^1.1.2",
+    "@notifee/react-native": "^7.8.0",
     "@ptomasroos/react-native-multi-slider": "^2.2.2",
     "@react-native-async-storage/async-storage": "^1.19.3",
     "@react-native-community/masked-view": "^0.1.11",
